Se crea el controller para el Registro del usuario y se añade la validación básica

--- a/views/login.html
+++ b/views/login.html
@@ -12,5 +12,5 @@
 		<button class="btn btn-lg btn-primary" ng-click="login()"> Sign In</button>
 	</form>
 	<hr></hr>
-	<a href="" class="btn btn-lg btn-warning">Sign Up</a>
+	<a href="" class="btn btn-lg btn-warning" ng-href="#/register">Sign Up</a>
 </div>
