--- a/views/login.html
+++ b/views/login.html
@@ -1,15 +1,15 @@
 <div class="row center-block">
 	<h2>Login form</h2>
-	<form>
-		<div class="form-group">
+	<form name="fLogin" novalidate>
+		<div class="form-group" ng-class="{'has-error': (fLogin.$submitted && (fLogin.lEmail.$error.required || fLogin.lEmail.$error.email))}">
 	    	<label for="exampleInputEmail1">Email address</label>
-	    	<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email" required ng-model="user.email">
+	    	<input type="email" name="lEmail" class="form-control" id="exampleInputEmail1" placeholder="Email" required ng-model="user.email">
 	  	</div>
-	  	<div class="form-group">
+	  	<div class="form-group" ng-class="{'has-error': (fLogin.$submitted && fLogin.lPassword.$error.required)}">
 		    <label for="exampleInputPassword1">Password</label>
-		    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" required ng-model="user.password">
+		    <input type="password" name="lPassword" class="form-control" id="exampleInputPassword1" placeholder="Password" required ng-model="user.password">
 	  	</div>
-		<button class="btn btn-lg btn-primary" ng-click="login()"> Sign In</button>
+		<button class="btn btn-lg btn-primary" ng-click="login(!fLogin.$invalid)"> Sign In</button>
 	</form>
 	<hr></hr>
 	<a href="" class="btn btn-lg btn-warning" ng-href="#/register">Sign Up</a>
